# cord

./: .gitignore  CLAUDE.md  README.md  TODO.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/agent/: state_machine.py  supervisor.py  tools.py
backend/app/agent/prompts/: system.py
backend/app/analytics/: analyzer.py  transcription.py
backend/app/api/: models.py
backend/app/api/routes/: calls.py  targets.py  ws.py  ws_voice.py
backend/app/research/: enricher.py
backend/app/services/: handlers.py  redis_client.py  task_queue.py
backend/app/voice/: pipeline.py  prompt.py  realtime.py
backend/cord_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/simulation/: call_runner.py  conftest.py  dispatch.py  judge.py  metrics.py  personas.py  sim_queue.py  simulator.py  test_simulated_call.py  worker.py
backend/tests/unit/: test_analyzer.py  test_api_calls.py  test_enricher.py  test_enrichment_flow.py  test_pipeline.py  test_prompt.py  test_realtime.py  test_redis_client.py  test_state_machine.py  test_supervisor.py  test_tools.py
docs/: TODO.md
docs/plans/: 2026-03-02-voice-agent-design.md  2026-03-02-voice-agent-implementation.md  2026-03-03-distributed-sim-layer2-design.md  2026-03-03-distributed-sim-layer2-implementation.md  2026-03-03-simulated-tests-layer1-design.md  2026-03-03-simulated-tests-layer1-implementation.md  2026-03-03-single-prompt-implementation.md  2026-03-03-single-prompt-redesign.md  2026-03-03-voice-orb-design.md  (+1 more)
frontend/: package-lock.json  package.json
(+18 files in other folders)
