[project]
name = "cord-backend"
version = "0.1.0"
description = "CORD Voice Persuasion Agent Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.66.0",
    "redis[hiredis]>=5.0.0",
    "twilio>=9.0.0",
    "deepgram-sdk>=3.5.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "audioop-lts>=0.2.1; python_version>='3.13'",
    "gender-guesser>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "fakeredis>=2.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
